fixed spacing on desktop

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     max-width: 900px;
     width: 100%;
     transition: 0.3s;
+    margin: 30px auto;
     justify-content: center;
     border: 0;
 }
